Fixed overlapping issue
Fixed issue where the search bar was underneath an unnecessarily large add box

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ code {
   position: fixed;
   top: 90px;
   left: 200px;
-  width: 100%;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
